[package]
name = "rust-wasm-poc"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
strum = "0.21"
strum_macros = "0.21"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = "0.18.0"